trying to fix menu link blue on mobile

--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,7 @@ body.modal-open {margin:0; background-color:var(--background-color); overflow:hi
       .dividers{height:var(--web-header-link-height); border-right-style:solid; border-color:var(--accent-color-2); border-width:var(--border-width);}
       #mobile-menu-button{position: absolute; text-decoration:none; cursor: pointer; left: 0px; height: 30px; margin: 10px; padding-left:15px; padding-right:15px; background-color:var(--secondary-color); font-color:var(--font-color-link); border-style:solid; border-color:var(--accent-color-2); border-width:var(--border-width); font-family:var(--font); font-size:var(--web-font-size); -webkit-transition:0.5s;}
       #mobile-menu-button input {opacity: 0; width: 0; height: 0;}
+      #mobile-menu-button a:link, a:visited, a:hover, a:active{text-decoration:none; color:inherit;}
       .header-spacer{height:var(--web-header-height);}
       #header-embed{width:100%; position:fixed; z-index:10;}
     }
